exports[`test yield_arrow_error.js 1`] = `
"function * f () {
  var e = () => { yield 1; };
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function* f() {
  var e = () => {
    yield;
    1;
  };
}
"
`;

exports[`test yield_arrow_error2.js 1`] = `
"function * f () {
  var e = () => yield 1;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function* f() {
  var e = () => yield;
  1;
}
"
`;
